--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,10 @@
 		<!-- <param-value>classpath:spring-mybatis.xml</param-value> -->
 		<param-value>classpath:applicationContext.xml</param-value>
 	</context-param>
+	<context-param>  
+	    <param-name>log4jConfigLocation</param-name>  
+		<param-value>classpath:log4j.properties</param-value>  
+	</context-param> 
 	<!-- 编码过滤器 -->
 	<filter>
 		<filter-name>encodingFilter</filter-name>
@@ -32,6 +36,10 @@
 	<listener>
 		<listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
 	</listener>
+	<!-- log4j -->
+	 <listener> 
+		  <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>  
+	 </listener>
 
 	<!-- Spring MVC servlet -->
 	<servlet>
