add product, user and order manage functions

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -32,6 +32,10 @@
 	 <listener>
 		<listener-class>com.makao.utils.DropDBTablesOnInit</listener-class>
 	</listener>
+	<!-- 创建Product商品库总表 -->
+	<listener>
+		<listener-class>com.makao.utils.CreateProductTableOnInit</listener-class>
+	</listener>
 	<!-- Spring监听器 -->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
