add img size checking, product list pages unfinished

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -28,6 +28,20 @@
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	<!-- 自定义的编码过滤器，解决图片中src='中文名.jpg'时将中文编码后无法访问到图片 -->
+	<filter>
+	    <filter-name>urlFilter</filter-name>
+	    <filter-class>com.makao.utils.UrlFilter</filter-class>
+	    <init-param>
+	      <param-name>DEFAULT_URI_ENCODE</param-name>
+	      <param-value>UTF-8</param-value>
+	    </init-param>
+	</filter>
+	<filter-mapping>
+	    <filter-name>urlFilter</filter-name>
+	    <url-pattern>/*</url-pattern>
+	</filter-mapping>
+  
 	<!-- 测试时，先自动清空数据库表，实际上线时去掉 -->
 	 <listener>
 		<listener-class>com.makao.utils.DropDBTablesOnInit</listener-class>
