--- a/pom.xml
+++ b/pom.xml
@@ -231,7 +231,7 @@
 	</dependencies>
 	
 	<build>
-		<finalName>com.makao.wxmall</finalName>
+		<finalName>ROOT</finalName>
 		    <plugins>  
 		        <plugin>  
 		            <groupId>org.apache.maven.plugins</groupId>  
