--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
+encoding//src/main/java/com/makao/misc/constant.py=utf-8
+encoding//src/main/java/com/makao/misc/processOrder.py=utf-8
 encoding//src/main/resources/jdbc.properties=UTF-8
 encoding//src/main/resources/log4j.properties=UTF-8
 encoding//src/main/webapp/WEB-INF/html/s_index.jsp=UTF-8
