--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,11 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 /target/
+.DS_Store
+src/.DS_Store
+src/main/.DS_Store
+src/main/java/.DS_Store
+src/main/java/com/.DS_Store
+src/main/java/com/makao/.DS_Store
+src/main/java/com/makao/service/.DS_Store
+src/main/webapp/WEB-INF/js/.DS_Store
