add auto approachOrders script

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ src/main/java/com/.DS_Store
 src/main/java/com/makao/.DS_Store
 src/main/java/com/makao/service/.DS_Store
 src/main/webapp/WEB-INF/js/.DS_Store
+src/main/java/com/makao/misc/constant.pyc
+src/main/java/com/makao/misc/log.py
+src/main/java/com/makao/misc/log.pyc
