--- a/pom.xml
+++ b/pom.xml
@@ -228,6 +228,11 @@
 		    <version>2.8.1</version>
 		</dependency>
 		
+		<dependency>
+		    <groupId>org.quartz-scheduler</groupId>
+		    <artifactId>quartz</artifactId>
+		    <version>2.2.1</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
