add coupon exchange record to point log

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -5,7 +5,7 @@ password=660419
 
 hibernate.hbm2ddl.auto=update
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
-hibernate.show_sql=true
+hibernate.show_sql=false
 hibernate.format_sql=true
 #定义初始连接数
 initialSize=0
