--- a/pom.xml
+++ b/pom.xml
@@ -233,6 +233,12 @@
 		    <artifactId>quartz</artifactId>
 		    <version>2.2.1</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.apache.httpcomponents</groupId>
+		    <artifactId>httpmime</artifactId>
+		    <version>4.0-alpha3</version>
+		</dependency>
+		
 	</dependencies>
 	
 	<build>
